--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bootstrap": "^5.2.2",
         "colors": "^1.4.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-graphql": "^0.12.0",
         "graphql": "^15.8.0",
-        "mongoose": "^6.7.0"
+        "mongoose": "^6.7.0",
+        "react-bootstrap": "^2.6.0"
     },
     "devDependencies": {
         "dotenv": "^16.0.3",
