--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "bootstrap": "^5.2.2",
         "colors": "^1.4.0",
         "cors": "^2.8.5",
