--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
-        "bootstrap": "^5.2.2",
         "colors": "^1.4.0",
+        "cookie-parser": "^1.4.6",
+        "cookie-session": "^2.0.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "express-graphql": "^0.12.0",
         "graphql": "^15.8.0",
-        "mongoose": "^6.7.0",
-        "react-bootstrap": "^2.6.0"
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.7.0"
     },
     "devDependencies": {
         "dotenv": "^16.0.3",
